# DataScience

./: .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  README.md  pyproject.toml  report.json  requirements.txt
.github/workflows/: python-tests.yml
data/: .gitkeep
notebooks/: .gitkeep
src/: app_logic.py  config_utils.py  database.py  interfaces.py  main.py
src/analysis_modules/: __init__.py  anomalies.py  clustering.py  decomposition.py  explainability.py  feature_engineering.py  profiling.py
tests/: .gitkeep  test_anomalies.py  test_app_launch.py  test_app_logic.py  test_clustering.py  test_config_utils.py  test_database.py  test_decomposition.py  test_explainability.py  test_feature_engineering.py  test_main.py  test_profiling.py  test_ui.py
