[project]
name = "app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "elasticsearch>=7.0.0,<8.0.0",
    "matplotlib>=3.10.5",
    "pandas>=2.3.1",
    "psycopg2-binary>=2.9.10",
    "pytest>=8.4.1",
    "pytest-mock>=3.14.1",
    "scikit-learn>=1.7.1",
    "selenium>=4.32.0",
    "statsmodels>=0.14.5",
    "streamlit>=1.48.0",
    "webdriver-manager>=4.0.2",
]
